cmake_minimum_required(VERSION 3.4)
project(Samsung-Prism)
add_subdirectory(pybind11)
pybind11_add_module(module_name sample_files/sample1.cc)
pybind11_add_module(module_name2 sample_files/sample2.cc)
pybind11_add_module(module_name3 sample_files/sample3.cc)
pybind11_add_module(module_name4 sample_files/sample4.cc)